CHANGES IN FLTK 1.1.0b7

	- Some Win32 drivers would draw into wrong buffers
	  after OpenGL mode change
	- Message handling and Resources for Mac port
	- More documentation updates...
	- Fl_Help_View could get in an infinitely loop when
	  determining the maximum width of the page; this
	  was due to a bug in the get_length() method with
	  percentages (100% width would cause the bug.)
	- Don't need -lgdi32 for CygWin, since -mwindows
	  does this for us.
	- The WIN32 event handler did not properly handle
	  WM_SYNCPAINT messages.
	- Fl_Tabs now uses the boxtype exclusively to draw
	  both the tabs and surrounding box, so alternate
	  box types actually work and the look is a little
	  nicer.
	- Fixed the drawing of large areas with the new
	  plastic boxtypes.
	- Updated the Visual C++ demo projects to use fluid
	  to generate the GUI files as needed.
	- The demo program didn't load the right menu file
	  when compiled for debugging under WIN32.
	- Added plastic box types to forms demo.
	- Added mousewheel to keyboard demo.
	- The Fl_Text_Editor widget caused an infinite loop
	  when it received keyboard focus.
	- filename_isdir() didn't properly handle drive letters
	  properly; WIN32 needs a trailing slash for drive
	  letters by themselves, but cannot have a trailing
	  slash for directory names, go figure...
	- The Fl_Text_Buffer and Fl_Text_Display classes did not
	  initialize all of their members.
	- fl_normal_label() had a totally redundant set of
	  if/else tests, which the new code handles all from
	  fl_draw().
	- The Fl_File_Chooser dialog contained two hotspots.
	- The fl_draw_pixmap() function didn't free the 2-byte
	  color lookup table properly (delete instead of
	  delete[]).
	- fl_draw() reset the text color under WIN32, causing
	  bitmaps to draw incorrectly.
	- Fl::get_font_sizes() is now implemented under WIN32.
	- Fl_Text_Display now uses the same default colors for
	  selection and text as Fl_Input_ and friends.